--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngfoundry-core",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "repository": {
     "type": "git",
     "url": "https://github/SteveStrong/ngFoundry-core.git"
@@ -20,13 +20,15 @@
   "module": "ngfoundry-core.js",
   "jsnext:main": "ngfoundry-core.js",
   "typings": "ngfoundry-core.d.ts",
-  "peerDependencies": {
-    "@angular/core": "^4.0.0",
+  "dependencies": {
     "@types/three": "^0.89.2",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "savery": "^1.2.0",
     "gsap": "^1.20.3",
     "three": "^0.84.0"
+  },
+  "peerDependencies": {
+    "@angular/core": "^4.0.0",
+    "zone.js": "^0.8.4"
   }
 }
